fix image cropping bug

--- a/src/chat/Message.module.scss
+++ b/src/chat/Message.module.scss
@@ -74,6 +74,7 @@
     object-fit: cover;
     border-radius: 12px;
     background-size: cover;
+    background-position: center;
     cursor: pointer;
   }
 
