--- a/src/community/voice/VoiceChannel.module.scss
+++ b/src/community/voice/VoiceChannel.module.scss
@@ -15,6 +15,7 @@
   height: 200px;
   border-radius: 10px;
   background-size: cover;
+  background-position: center;
 
   .name {
     display: flex;
